packages/uow-core/main/default/objects/UoWObjectPrecedence__mdt/UoWObjectPrecedence__mdt.object-meta.xml
<CustomObject>
    <description>Global DML execution precedence for SObject types. Lower precedence values execute first. Used to establish default ordering when no explicit relate() relationship exists between objects. This is org-wide configuration, not per-UoW-Configuration.</description>
    <label>UoW Object Precedence</label>
    <pluralLabel>UoW Object Precedences</pluralLabel>
</CustomObject>