packages/uow-core/main/default/objects/UoWObjectPrecedence__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description explaining why this object has this precedence value</description>
    <inlineHelpText>Document the reasoning for this precedence value (e.g., &apos;Parent of Contact and Opportunity&apos;)</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>