packages/uow-core/main/default/objects/UoWObjectPrecedence__mdt/fields/Precedence__c.field-meta.xml
<CustomField>
    <fullName>Precedence__c</fullName>
    <description>DML execution precedence value. Lower values execute first. Example: Account=10, Contact=20 means Account DML executes before Contact when no explicit relate() relationship exists.</description>
    <inlineHelpText>Execution order precedence (lower = earlier). Recommended ranges: 10-100 for parent objects, 100-500 for child objects, 500+ for junction/audit objects.</inlineHelpText>
    <label>Precedence</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>