packages/uow-core/main/default/objects/UoWObjectPrecedence__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>API name of the SObject type (e.g., Account, Contact, CustomObject__c)</description>
    <inlineHelpText>API name of the SObject this precedence applies to. Must match exactly (e.g., &apos;Account&apos;, &apos;CustomObject__c&apos;)</inlineHelpText>
    <label>SObject Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>