packages/uow-core/main/default/objects/UoWObjectPrecedence__mdt/listViews/AllObjectPrecedences.listView-meta.xml
<ListView>
    <fullName>AllObjectPrecedences</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SObjectType__c</columns>
    <columns>Precedence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>